<resources>
    <string name="app_name">OCR App</string>
    <string name="capture_an_image">Capture an image.</string>
    <string name="toggle_auto_focus">Toggle auto focus.</string>
    <string name="switch_flash_mode">Switch flash mode.</string>
    <string name="payment_reference_disabled">VS/CS/SS must be empty</string>
    <string name="clear_bounding_box">Clear previously assigned bounding box.</string>
    <string name="rotate_img">Rotate the image right by 90 degrees</string>
    <string name="field_name">Field name</string>
    <string name="layout_editor">Layout Editor</string>
    <string name="pick_image_gallery">Pick an image from the gallery.</string>
    <string name="save_bounding_boxes">Confirm and save bounding boxes.</string>
    <string name="overview">Overview</string>
    <string name="previous_template">Switch to previous template.</string>
    <string name="delete_template">Delete current template.</string>
    <string name="confirm_template">Confirm current template.</string>
    <string name="edit_template">Edit current template.</string>
    <string name="next_template">Switch to next template</string>
    <string name="create_template">Create a new template.</string>
    <string name="new_layout">New Layout</string>
    <string name="symbols_disabled">Payment ref. must be empty</string>
    <string name="select_template_desc">Select an image to be used as a template</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="template_name_edit">Template name edit box</string>
    <string name="save">Save</string>
    <string name="qr_code_image">QR code containing transaction information</string>
    <string name="edit_text_template_description">Edit text for template name</string>
    <string name="edit_text_template_hint">Template name</string>
    <string name="save_template_dialog_icon">Save template dialog icon</string>
    <string name="qr_code_description">To complete your payment either scan this QR code with your banking app or open the %s</string>
    <string name="currency_spinner_icon">Currency spinner icon</string>
    <string name="currency_eur">EUR</string>
    <string name="pay_by_square_title">Pay by Square</string>
    <string name="payment_details_title">Payment Details</string>
    <string name="recipient">Recipient</string>
    <string name="iban">Iban</string>
    <string name="amount">Amount</string>
    <string name="variable_symbol">Variable symbol</string>
    <string name="constant_symbol">Constant symbol</string>
    <string name="specific_symbol">Specific symbol</string>
    <string name="sender_s_note">Sender\'s note</string>
    <string name="payment_reference">Payment reference</string>
    <string name="confirm_transaction_btn">Confirm</string>
    <string name="delete_template_dialog">Do you really want to delete this template?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">delete</string>
    <string name="testing_hyperlink">Testing placeholders %s %s</string>
    <string-array name="formFields">
        <item>beneficiary name</item>
        <item>iban</item>
        <item>amount</item>
        <item>variable symbol</item>
        <item>constant symbol</item>
        <item>specific symbol</item>
        <item>note</item>
        <item>payment reference</item>
    </string-array>
    <string-array name="formFieldsCurrency">
        <item>EUR</item>
        <item>USD</item>
        <item>CZK</item>
    </string-array>

</resources>