<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

    <carbon.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <carbon.widget.ConstraintLayout
            android:id="@+id/headerContainer"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/carbon_blue_a700">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:contentDescription="@string/save_template_dialog_icon" />


        </carbon.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/carbon_blue_a700"
            android:textSize="20sp"
            android:text="@string/delete_template_dialog"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerContainer" />

        <Button
            android:id="@+id/btnCancelDeleteTemplate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:elevation="0dp"
            android:text="@string/cancel"
            android:textColor="@color/carbon_blue_a700"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btnDeleteTemplate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnDeleteTemplate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackground"
            android:elevation="0dp"
            android:text="@string/delete"
            android:textColor="@color/carbon_blue_a700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancelDeleteTemplate"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </carbon.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

