<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.templateeditorapp.ui.opencv.MyCameraView
        android:id="@+id/cameraSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnCapture"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/capture_an_image"
        android:elevation="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:minWidth="1dp"
        android:minHeight="1dp"
        android:translationZ="10dp"
        android:backgroundTint="@color/black"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_baseline_camera_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="55dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFocus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFlash"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button" />

    <Button
        android:id="@+id/btnFlash"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/switch_flash_mode"
        android:elevation="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:minWidth="1dp"
        android:minHeight="1dp"
        android:translationZ="10dp"
        android:backgroundTint="@color/black"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_baseline_flash_off_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnCapture"
        app:layout_constraintEnd_toStartOf="@+id/btnCapture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCapture"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button" />

    <Button
        android:id="@+id/btnFocus"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/toggle_auto_focus"
        android:elevation="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:minWidth="1dp"
        android:minHeight="1dp"
        android:translationZ="10dp"
        android:backgroundTint="@color/black"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_baseline_do_disturb_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCapture"
        app:layout_constraintTop_toTopOf="@+id/btnCapture"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button" />

</androidx.constraintlayout.widget.ConstraintLayout>